--- a/people/index.html
+++ b/people/index.html
@@ -3,18 +3,17 @@
 <!-- for now has slideshow at top of page -->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-                <title>{{ page.title }}</title>
-        {% include mapstyle.html %}
+            <title>{{ page.title }}</title>
+        {% include ../mapstyle.html %}
     </head>
     <body>
         <script src="http://code.jquery.com/jquery.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
         <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?1.29.1"></script>
-        {% include mauricio.html %}
-        {% include gistDisect.html %}
-        {% include gistMod.html %}
-        {% include mapMarking.html %}        
+        {% include ../mauricio.html %}
+        {% include ../gistDisect.html %}
+        {% include ../gistMod.html %}
+        {% include ../mapMarking.html %}        
     </body>
 </html>
